<2024.11.13>책 제목 상세 정보 숨김

--- a/eventProject/src/main/webapp/css/egovframework/book/bookRecord.css
+++ b/eventProject/src/main/webapp/css/egovframework/book/bookRecord.css
@@ -52,7 +52,7 @@ h1{
 /* 도서 이미지 */
 .book-image {
     width: 80%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     border-radius: 3px;
     cursor : pointer;
