--- a/eventProject/src/main/webapp/css/egovframework/book/bookNoteDetail.css
+++ b/eventProject/src/main/webapp/css/egovframework/book/bookNoteDetail.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";@charset "UTF-8";
+body {
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 16px;
+    color: #333;
+}
+
 .wrap{
 	width : 70%;
 	display : flex;
@@ -7,7 +13,7 @@
 	align-items: center;
 	border: 1px solid #ddd;
     border-radius: 10px;
-    margin : 0px auto;
+    margin : 15px auto;
 }
 
 .book-info {
@@ -16,7 +22,7 @@
     justify-content:center;	
     align-items: center;
     border-bottom : 1px solid #ddd;
-    width: 700px;
+    width: 90%;
     margin-top : 25px;
 }
 
@@ -29,34 +35,48 @@
 }
 
 .book-title {
-	
+	text-align : center;
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin: 15px 45px 5px 45px;
 }
 
 .book-author {
+	text-align : center;
     font-size: 16px;
     color: #666;
 }
 .note-form {
     position: relative;
-    width: 700px;
+    width: 90%;
     margin: 0 auto;
-    padding: 30px;
+    padding: 30px 50px;
     
 }
 .note-form table {
     width: 100%;
+    border-spacing: 0 10px; /* tr 간격 조정 */
 }
 
 .input-text {
+	font-family: inherit; /* body의 글꼴 상속 */
+    font-size: inherit; /* body의 폰트 크기 상속 */
     width: 100%;
-    padding: 8px;
+    max-width: 100%; /* td 너비를 초과하지 않도록 */
+    box-sizing: border-box; /* 패딩 포함하여 너비 계산 */
+    padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
     border: 1px solid #ccc;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
+
+.input-text:focus {
+    border-color: var(--primary-color); /* 포커스 시 테두리 색 변경 */
+    box-shadow: 0 0 8px rgba(0, 150, 255, 0.3); /* 포커스 시 그림자 */
+    outline: none;
+}
+
 
 .btn_save,.btn_list {
     padding: 7px 16px;
@@ -75,10 +95,12 @@
 .btn_save:hover {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
     background-color: var(--secondary-color);
+    transform: translateY(-3px); /* 위로 5px 이동 */
 }
 .btn_list:hover {
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
    background-color: var(--secondary-color);
+   transform: translateY(-3px); /* 위로 5px 이동 */
 }
 
 .star i {
